Added shortcuts to GitHub and itch profile page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <link href="styles/fa-all.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/shortcut.css">
   <title>🌟 Ravi's Developer Portfolio!</title>
   <link rel="shortcut icon" type="image/png" href="path/to/your/favicon.png"/>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -52,6 +53,24 @@
     <div id="app">
     </div>
   </div>
+  <a href="https://github.com/ravier1" target="_blank" class="xp-shortcut-link">
+    <div class="xp-shortcut">
+      <div class="icon-wrapper">
+        <img src="./desktop-icons/github.png" alt="Shortcut Icon">
+        <img src="./desktop-icons/shortcut-icon.png" alt="Shortcut Arrow" class="shortcut-arrow">
+      </div>
+      <span>My Github Page!</span>
+    </div>
+  </a>
+  <a href="https://ravier1.itch.io" target="_blank" class="xp-shortcut-link">
+    <div class="xp-shortcut second">
+      <div class="icon-wrapper">
+        <img src="./desktop-icons/itch-io.png" alt="Shortcut Icon">
+        <img src="./desktop-icons/shortcut-icon.png" alt="Shortcut Arrow" class="shortcut-arrow">
+      </div>
+      <span>My Itch.io Page!</span>
+    </div>
+  </a>
   <script type="text/javascript" src="scripts/shell.js"></script>
   <script type="text/javascript" src="scripts/cli.js"></script>
   <script type="text/javascript">
