Update with contact info, formatting and extra stuff!

--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
       <span>My Itch.io Page!</span>
     </div>
   </a>
+  <a href="mailto:rvgk1202@icloud.com" class="xp-shortcut-link">
+    <div class="xp-shortcut third">
+      <div class="icon-wrapper">
+        <img src="./desktop-icons/email-icon.png" alt="Email Icon">
+        <img src="./desktop-icons/shortcut-icon.png" alt="Shortcut Arrow" class="shortcut-arrow">
+      </div>
+      <span>Contact Me!</span>
+    </div>
+  </a>
   <script type="text/javascript" src="scripts/shell.js"></script>
   <script type="text/javascript" src="scripts/cli.js"></script>
   <script type="text/javascript">
