--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="styles/fa-all.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/shortcut.css">
-  <title>👾 Ravi's Developer Portfolio!</title>
+  <title>🌟 Ravi's Developer Portfolio!</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
