update pictures for faster website loading

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="profile-container">
     <div class="profile-image">
-      <img src="./resume/profile_pic.png" alt="Ravi's Profile Picture">
+      <img src="./resume/profile_pic.webp" alt="Ravi's Profile Picture">
     </div>
     <h2 class="profile-text">Hey! It's Ravi!</h2>
   </div>
@@ -88,9 +88,9 @@
       let backgroundImage = '';
 
       if (hour >= 6 && hour < 18) {
-        backgroundImage = 'url("./wallpapers/bliss_daytime.png")'; // Correct path to daytime image
+        backgroundImage = 'url("./wallpapers/bliss_daytime.webp")'; // Correct path to daytime image
       } else {
-        backgroundImage = 'url("./wallpapers/bliss_nighttime.jpg")'; // Correct path to nighttime image
+        backgroundImage = 'url("./wallpapers/bliss_nighttime.webp")'; // Correct path to nighttime image
       }
       console.log(`Current hour: ${hour}`);
       console.log(`Selected background image: ${backgroundImage}`);
